--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,21 +1,59 @@
+{# @var Symfony\Component\Finder\SplFileInfo mascot #}
+{% import "macro.html.twig" as macro %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('assets/bootstrap/css/bootstrap-reboot.min.css') }}" >
-            <link rel="stylesheet" href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}" >
-        {% endblock %}
+        {% block head %}
+            <meta charset="UTF-8">
+            <title>{% block title %}Home ~{% endblock %}</title>
+            {% block stylesheets %}
+                <link rel="stylesheet" href="{{ asset('assets/css/main.css') }}">
+            {% endblock %}
 
-        {% block javascripts %}
-            <script src="{{ asset('assets/bootstrap/js/bootstrap.bundle.min.js') }}" ></script>
+            {% block javascripts %}
+                <script src="{{ asset('assets/bootstrap/js/bootstrap.bundle.min.js') }}" ></script>
+            {% endblock %}
+
+            <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+            <link rel="icon" href="{{ asset('assets/images/icon.png') }}" />
         {% endblock %}
     </head>
-    <body>
+    <body class="{% block body_class %}py-4 px-md-4{% endblock %}" style="opacity: 0">
         {% block body %}
-            yay website lmao
+            <div class="container-fluid flex-grow-1 main-container">
+                {% block body_title %}
+                    <h1 class="mb-4 page-title-main">{{ body_title }}</h1>
+                {% endblock %}
+
+                <div class="row row-main">
+                    <div class="col-12 col-md-6">
+                        {% block left_column %}
+                            {{ macro.card('example', 'This card is an example, you should extend this template, read more <a href="https://github.com/pkly/ly-page">here</a>', {'http://foo.bar': 'example'}) }}
+                        {% endblock %}
+                    </div>
+                    <div class="col-12 col-md-6 mascot-container">
+                        {% block right_column %}
+                            {% if mascot is not null %}
+                                <img src="{{ mascot.relativePathname }}" class="mascot img-mascot" />
+                            {% endif %}
+                        {% endblock %}
+                    </div>
+                </div>
+            </div>
+            {% block footer %}
+                <footer>
+                    {% block footer_body %}
+                        <a href="{{ path('app_admin_dashboard_index') }}">admin</a>
+                    {% endblock %}
+                </footer>
+            {% endblock %}
         {% endblock %}
+        {# this just makes it so the page can not flashbang you #}
+        <script>
+            window.onload = function () {
+                document.getElementsByTagName("body").item(0).style.opacity = 1;
+            };
+        </script>
     </body>
 </html>
