Add mascot groups, update starting migration, add the loading logic, update css, add a way to change the mascot group, etc... app-build

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -11633,6 +11633,12 @@ footer a {
   margin-bottom: calc(1.5rem + 20px);
 }
 
+#mascot-group-select {
+  max-width: 180px;
+  display: inline-block;
+  border: 0;
+}
+
 html, body {
   min-height: 100vh;
 }
