--- a/public/assets/scss/elements/_mascot.scss
+++ b/public/assets/scss/elements/_mascot.scss
@@ -14,3 +14,9 @@
     margin-bottom: calc(1.5rem + 20px);
   }
 }
+
+#mascot-group-select {
+  max-width: 180px;
+  display: inline-block;
+  border: 0;
+}
