--- a/templates/example.html.twig
+++ b/templates/example.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 {% import "macro.html.twig" as macro %}
 
-{% block left_column %}
+{% block cards_left %}
     {{ macro.card('new1', 'This card is an example, you should extend this template, read more <a href="https://github.com/pkly/ly-page">here</a>', {'http://foo.bar': 'example'}) }}
     {{ macro.card('new2', 'This card is an example, you should extend this template, read more <a href="https://github.com/pkly/ly-page">here</a>', {'http://foo.bar': 'example'}) }}
     {{ macro.card('new3', 'This card is an example, you should extend this template, read more <a href="https://github.com/pkly/ly-page">here</a>', {'http://foo.bar': 'example'}) }}
