Add flex grow app-build

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
                     <h1 class="mb-4 page-title-main">{{ body_title }}</h1>
                 {% endblock %}
 
-                <div class="row row-main">
+                <div class="row row-main flex-grow-1">
                     <div class="col-12 col-md-6">
                         {% block left_column %}
                             {% block rss_left %}
