--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -3,4 +3,9 @@
 
 {% block main %}
     o/
+
+    <div>
+        If a mascot group called `offline` is specified it will not be displayed in lists, but instead show up when the website
+        cannot be loaded from normal online state.
+    </div>
 {% endblock %}
