--- a/templates/admin/entity/image.add.html.twig
+++ b/templates/admin/entity/image.add.html.twig
@@ -3,7 +3,7 @@
 {% block main %}
     {% import 'macro.html.twig' as macro %}
 
-    {{ macro.mascot(newMascotPath, newMascotExt) }}
+    {{ macro.mascot(newImagePath, newImageExt) }}
 
     {{ parent() }}
 {% endblock %}
