--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,1 +1,25 @@
 {% extends '@EasyAdmin/layout.html.twig' %}
+
+{% block main %}
+    <h3>Control wallpapers</h3>
+
+    {{ form_start(wallpaperForm) }}
+        <div class="row">
+            <div class="field-association form-group">
+                <div class="col-12">
+                    {{ form_label(wallpaperForm.tags) }}
+                </div>
+                <div class="col-12">
+                    {{ form_widget(wallpaperForm.tags) }}
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                {{ form_widget(wallpaperForm.submit) }}
+            </div>
+        </div>
+    {{ form_end(wallpaperForm) }}
+
+    {{ parent() }}
+{% endblock %}
