add logic to run correctly when updating rss along with all that other garbage

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,12 @@
 <html lang="en" data-bs-theme="dark">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+
+        <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+        <link rel="icon" href="{{ asset('assets/img/img.png') }}" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <title>{% block title %}Home ~{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('assets/css/bootstrap-reboot.min.css') }}" />
             <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}" />
@@ -77,6 +82,21 @@
             {% for link in footerLinks %}
                 <a href="{{ link.url }}">{{ link.title }}</a>
             {% endfor %}
+
+            <select id="mascot-group-selector" data-redirect-url="{{ path('front.mascot_set', {group: 'groupPlaceholder'}) }}">
+                {% for group in mascotGroups %}
+                    <option value="{{ group.id }}" {% if currentMascotGroup != null and currentMascotGroup.id == group.id %}selected{% endif %}>{{ group.title }}</option>
+                {% endfor %}
+            </select>
         </footer>
     </body>
+    <script type="text/javascript">
+        document.getElementById('mascot-group-selector').addEventListener('change', function (event) {
+            let element = document.getElementById('mascot-group-selector');
+            let url = element.getAttribute('data-redirect-url');
+            let value = element.options[element.selectedIndex].value;
+
+            window.location.href = url.replace('groupPlaceholder', value);
+        });
+    </script>
 </html>
