Fix minor redirect bug, lower possible request times app-build

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -34,8 +34,17 @@ body {
     height: 100vh;
 }
 
-.mascot-container {
-    height: 100%;
+@media (min-width: 768px) {
+    .mascot-container {
+        height: 100%;
+    }
+}
+
+@media (max-width: 767px) {
+    .mascot-container {
+        padding-top: 30px;
+        padding-bottom: 15px;
+    }
 }
 
 .mascot {
